--- a/app/src/main/res/layout/activity_local_devices.xml
+++ b/app/src/main/res/layout/activity_local_devices.xml
@@ -7,13 +7,50 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.LocalDevicesActivity">
 
-    <TextView
+    <Switch
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/bluetoothSwitch" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="15dp" app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+            android:text="@string/bluetooth"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toStartOf="@+id/bluetoothSwitch"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"/>
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/recyclerView"/>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/listFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:tint="@color/white"
+            android:src="@drawable/ic_list"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/refreshFab"/>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/refreshFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:tint="@color/white"
+            android:src="@drawable/ic_refresh"
+            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="10dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
