--- a/app/src/main/res/layout/activity_remote_devices.xml
+++ b/app/src/main/res/layout/activity_remote_devices.xml
@@ -7,4 +7,21 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.RemoteDevicesActivity">
 
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="395dp"
+            android:layout_height="587dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabReorder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:tint="@color/white"
+            android:src="@drawable/ic_refresh" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
