:octocat: Create the remote devices adapter.

--- a/app/src/main/res/layout/activity_remote_devices.xml
+++ b/app/src/main/res/layout/activity_remote_devices.xml
@@ -23,8 +23,7 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/remoteDevsRecyclerView"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-    />
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabReorder"
@@ -36,4 +35,5 @@
             android:src="@drawable/ic_refresh" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
 </android.support.constraint.ConstraintLayout>
