--- a/app/src/main/res/layout/cardview_remote_item.xml
+++ b/app/src/main/res/layout/cardview_remote_item.xml
@@ -39,7 +39,7 @@
                     android:textColor="@color/black"/>
 
             <TextView
-                    android:id="@+id/macAdress"
+                    android:id="@+id/createdAt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"/>
