--- a/app/src/main/res/layout/activity_remote_devices.xml
+++ b/app/src/main/res/layout/activity_remote_devices.xml
@@ -32,7 +32,7 @@
             android:clickable="true"
             android:focusable="true"
             android:tint="@color/white"
-            android:src="@drawable/ic_refresh" android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_arrow_down" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
